* src/number.c (numset_add_num): store the ret val of numset_find_empty_cell in a variable and use it as an index into the numbers_taken array.
* src/actions.c (cmd_curframe): return the frame number in
non-interactive mode.

* src/split.c (cleanup_frame): in the maxsize windows are
transients check either the width or height must be less than the
screen width/height (just like in windows.c).

--- a/AUTHORS
+++ b/AUTHORS
@@ -13,24 +13,25 @@ Meanwhile, the patches are piling up.
 
 Other Contributors:
 
-Ben Leslie <benno@sesgroup.net>
-Chr. v. Stuckrad <stucki@math.fu-berlin.de>
-Dan Aloni <da-x@gmx.net>
-Doug Kearns <djkea2@mugc.its.monash.edu.au>
-Gergely Nagy <algernon@debian.org>
-Henrik Enberg <henrik@enberg.org>
-Jonathan Walther <krooger@debian.org>
-Martin Samuelsson <rp-contrib@cos.user.lysator.liu.se>
-Mike Meyer <mwm@mired.org>
-Nicklas Lindgren <nili@lysator.liu.se>
-Pasi Kallinen <pkalli@cs.joensuu.fi>
-Rupert <rupert.debian@hotpop.com>
-Tim Goodwin <tjg@star.le.ac.uk>
-Joshua Neuheisel <jneuheisel@msn.com>
-Thien-Thi Nguyen <ttn@surf.glug.org>
-Joshua Neuheisel <jneuheisel@msn.com>
-Sylvain BEUCLER <beuc@beuc.net>
-Cameron Patrick <cameron@patrick.wattle.id.au>
-Trent Buck <fubarbaz@bigpond.com>
-jesus c. meyendriesch <jesus@qplay.org>
-Bernhard R. Link <brlink@debian.org>
+Ben Leslie <benno at sesgroup dot net>
+Chr. v. Stuckrad <stucki at math dot fu-berlin dot de>
+Dan Aloni <da-x at gmx dot net>
+Doug Kearns <djkea2 at mugc dot its dot monash dot edu dot au>
+Gergely Nagy <algernon at debian dot org>
+Henrik Enberg <henrik at enberg dot org>
+Jonathan Walther <krooger at debian dot org>
+Martin Samuelsson <rp-contrib at cos dot user dot lysator dot liu dot se>
+Mike Meyer <mwm at mired dot org>
+Nicklas Lindgren <nili at lysator dot liu dot se>
+Pasi Kallinen <pkalli at cs dot joensuu dot fi>
+Rupert <rupert dot debian at hotpop dot com>
+Tim Goodwin <tjg at star dot le dot ac dot uk>
+Joshua Neuheisel <jneuheisel at msn dot com>
+Thien-Thi Nguyen <ttn at surf dot glug dot org>
+Joshua Neuheisel <jneuheisel at msn dot com>
+Sylvain BEUCLER <beuc at beuc dot net>
+Cameron Patrick <cameron at patrick dot wattle dot id dot au>
+Trent Buck <fubarbaz at bigpond dot com>
+jesus c. meyendriesch <jesus at qplay dot org>
+Bernhard R. Link <brlink at debian dot org>
+Tobias C. Rittweiler <tcr at freebits dot de>
