--- a/NEWS
+++ b/NEWS
@@ -7,6 +7,10 @@ are permitted in any medium without royalty provided the copyright
 notice and this notice are preserved.
 
 * Changes since 1.4.0-beta4
+** aspect ratio hint honoured
+windows with aspect ratio hints are treated as transients and are
+given the same default gravity as maxsize windows.
+
 ** new hook deletewindow
 When a window is deleted this hook is called.
 
