--- a/AUTHORS
+++ b/AUTHORS
@@ -35,3 +35,4 @@ Trent Buck <fubarbaz at bigpond dot com>
 jesus c. meyendriesch <jesus at qplay dot org>
 Bernhard R. Link <brlink at debian dot org>
 Tobias C. Rittweiler <tcr at freebits dot de>
+Antti Nykänen <aon at iki dot fi>
