--- a/AUTHORS
+++ b/AUTHORS
@@ -37,3 +37,4 @@ Bernhard R. Link <brlink at debian dot org>
 Tobias C. Rittweiler <tcr at freebits dot de>
 Antti Nykänen <aon at iki dot fi>
 rubikitch <rubikitch at ruby-lang org>
+Florian E.J. Fruth <fejf at rommel stw uni-erlangen de>
