*** empty log message ***

--- a/AUTHORS
+++ b/AUTHORS
@@ -38,3 +38,4 @@ Tobias C. Rittweiler <tcr at freebits dot de>
 Antti Nykänen <aon at iki dot fi>
 rubikitch <rubikitch at ruby-lang org>
 Florian E.J. Fruth <fejf at rommel stw uni-erlangen de>
+Tim Cooijmans <tim at aapopfiets nl>
