--- a/NEWS
+++ b/NEWS
@@ -7,6 +7,10 @@ are permitted in any medium without royalty provided the copyright
 notice and this notice are preserved.
 
 * Changes since 1.4.0
+** default font change
+It is now "-*-fixed-bold-r-normal-*-15-*-*-*-c-*-*-*" which hopefully
+fixes some i18n issues.
+
 ** new command set topkmap
 See info manual.
 
