--- a/doc/ratpoison.texi
+++ b/doc/ratpoison.texi
@@ -55,13 +55,14 @@ copy of the license is included in the section entitled "GNU Free
 Documentation License".
 @end titlepage
 
-@node Top, About, (dir), (dir)
+@node Top, GNU Free Documentation License, (dir), (dir)
 
 @ifinfo
 This document explains how to use ratpoison.
 @end ifinfo
 
 @menu
+* GNU Free Documentation License::
 * About::                       What Is Ratpoison?
 * Contacting::                  How Do I Contact The Ratpoison Developers?
 * Concepts::                    Window Manipulation Concepts
@@ -85,29 +86,31 @@ This document explains how to use ratpoison.
 
 Windows
 
-* Manipulating Windows::
-* Window Classes::
-* Unmanaged Windows::
-* Rudeness::
+* Manipulating Windows::        
+* Window Classes::              
+* Unmanaged Windows::           
+* Rudeness::                    
 
 Frames
 
-* Splitting Frames::
-* Resizing Frames::
-* Frame Navigation Commands::
-* Saving and Restoring Frame Sets::
-* Frame Numbering::
-* Dedicated Frames::
+* Splitting Frames::            
+* Resizing Frames::             
+* Frame Navigation Commands::   
+* Saving and Restoring Frame Sets::  
+* Frame Numbering::             
+* Dedicated Frames::            
 
 Keystrokes
 
-* Key Maps::
-* Default Key Bindings::
+* Key Maps::                    
+* Default Key Bindings::        
 
 @end detailmenu
 @end menu
 
-@node About, Contacting, Top, Top
+@include fdl.texi
+
+@node About, Contacting, GNU Free Documentation License , Top
 @chapter About
 
 ratpoison is a simple Window Manager with no fat library dependencies,
@@ -205,10 +208,10 @@ its best.
 Windows are what ratpoison manages.
 
 @menu
-* Manipulating Windows::
-* Window Classes::
-* Unmanaged Windows::
-* Rudeness::
+* Manipulating Windows::        
+* Window Classes::              
+* Unmanaged Windows::           
+* Rudeness::                    
 @end menu
 
 @node Manipulating Windows, Window Classes, Windows, Windows
@@ -602,12 +605,12 @@ time. ratpoison allows you to split the display into frames (see
 @ref{Concepts}). Each frame can then contain 1 window.
 
 @menu
-* Splitting Frames::
-* Resizing Frames::
-* Frame Navigation Commands::
-* Saving and Restoring Frame Sets::
-* Frame Numbering::
-* Dedicated Frames::
+* Splitting Frames::            
+* Resizing Frames::             
+* Frame Navigation Commands::   
+* Saving and Restoring Frame Sets::  
+* Frame Numbering::             
+* Dedicated Frames::            
 @end menu
 
 @node Splitting Frames, Resizing Frames, Frames, Frames
@@ -944,8 +947,8 @@ key. ratpoison will tell you it isn't bound and give you the name of
 the key.
 
 @menu
-* Key Maps::
-* Default Key Bindings::
+* Key Maps::                    
+* Default Key Bindings::        
 @end menu
 
 @node Key Maps, Default Key Bindings, Keystrokes, Keystrokes
